fix: context too long to destroy layout

--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -92,11 +92,14 @@ html {
 .todoListItem label {
   font-size: 20px;
   word-break: break-all;
-  padding: 0px 15px 0px 60px;
+  padding: 0px 45px 0px 60px;
   height: 40px;
   display: block;
   line-height: 40px;
   transition: color 0.4s;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
 
 .todoListItem .edit {
@@ -110,6 +113,9 @@ html {
   display: block;
   line-height: 40px;
   outline: none;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
 
 .todoListItem .destroy {
